<resources>
    <string name="help_video_open_story_first">Open a story before selecting this video</string>
    <string name="help_context_menu_overview">SP app Overview</string>
    <string name="help_context_menu_main">Main Screen/Story List</string>
    <string name="hide_learn_mic">Hide Learn Phase Microphone</string>
    <string name="hide_learn_mic_summary">Hide the practice microphone and toolbar in the Learn Phase.</string>
    <string name="bloom_templates">Download Bible Stories</string>
    <string name="bloom_library">Download Books from Bloom Library</string>
    <string name="select_workspace_folder">Select Folder</string>
    <string name="copy_demo">Add Practice story</string>
    <string name="gotIt">Close</string>
    <string name="app_name">Story Producer</string>
    <string name="select_language">🌐 Select Language</string>
    <string name="select_language_summary">Choose a UI language from the list</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="ok">OK</string>
    <string name="letsBegin">Let’s Begin</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="help">Help</string>
    <string name="search">Search</string>
    <string name="submit">Submit</string>
    <string name="submit_via">Submit via&#8230;</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="enter_text">Enter Text</string>
    <string name="play">Play</string>
    <string name="share">Share</string>
    <string name="sound_off">Sound off</string>
    <string name="sound_on">Sound on</string>
    <string name="question_mark">What is this?</string>
    <string name="SECONDS_ABBREVIATION">sec</string>
    <string name="MINUTES_ABBREVIATION">min</string>
    <string name="story_picture">story picture</string>
    <string name="stage_locked">stage locked</string>
    <string name="registration_title">Registration</string>
    <string name="learn_title">Learn</string>
    <string name="translate_revise_title">Record</string>
    <string name="community_work_title">Community</string>
    <string name="accuracy_check_title">Accuracy</string>
    <string name="voice_studio_title">Drama</string>
    <string name="finalize_title">Create</string>
    <string name="share_title">Share</string>
    <string name="whole_story_title">Whole Story Back Translation</string>
    <string name="back_translation_title">Back Translation</string>
    <string name="title_activity_story_templates">Story List</string>
    <string name="title_activity_wordlink_list">WordLinks List</string>
    <string name="registration_language_header">Language Information</string>
    <string name="registration_translator_header">Translator Information</string>
    <string name="registration_accuracy_check_header">Accuracy Checker Info</string>
    <string name="registration_trainer_header">Trainer Information</string>
    <string name="registration_additional_contacts">Additional Contacts</string>
    <string name="language_hint">Language (being translated into)</string>
    <string name="etnologue_code_hint">Ethnologue Code</string>
    <string name="country_hint">Country</string>
    <string name="location_hint">Province/State/Region</string>
    <string name="town_hint">Village/Town/City</string>
    <string name="lwc_hint">Language (being translated from)</string>
    <string name="orthography_hint">Orthography Status:</string>
    <string name="name_hint">Name</string>
    <string name="spoken_language_hint">Spoken Languages</string>
    <string name="phone_hint">Phone</string>
    <string name="email_hint">E-mail</string>
    <string name="other_hint">Other</string>
    <string name="person_location_hint">Location</string>
    <string name="education_hint">Education Level</string>
    <string name="communication_preference_hint">Communication Preference:</string>
    <string name="location_type_hint">Location Type: </string>
    <string name="bypass_button_text">Skip Registration</string>
    <string name="registration_submit">Submit Registration via…</string>
    <string name="camera_select_from">Select From:</string>
    <string name="camera_revert_title">Revert To The Original Image?</string>
    <string name="camera_revert_message">Do you want to revert to the original image?</string>
    <string name="welcome_to_story_producer">Welcome to Story Producer</string>
    <string name="exit_application">Exit Application?</string>
    <string name="exit_are_you_sure">Are you sure you want to quit?</string>
    <string name="use_internal_demo">Use internal demo</string>
    <string name="please_create_and_then_select_folder">Please create and then Select a new folder, needed for running the demo.</string>
    <string name="registration_exit_title">Exit Registration?</string>
    <string name="registration_exit_message">"Are you sure you want to exit registration?
        Your registration will not be submitted."</string>
    <string name="registration_skip_title">Skip Registration?</string>
    <string name="registration_skip_message">"Registration helps SIL support you and continue SP development."</string>
    <string name="registration_now">Register Now</string>
    <string name="registration_later">Register Later</string>
    <string name="registration_submit_title">Submit?</string>
    <string name="registration_submit_complete_message">Are you ready to submit?</string>
    <string name="registration_submit_incomplete_message">You have left some fields blank. Continue with submission?</string>
    <string name="registration_error_title">Submission Error</string>
    <string name="registration_error_message">Please provide an database email address</string>
    <string name="registration_saved_successfully">Registration information saved!</string>
    <string name="registration_support_email">SPapp_info@sil.org</string>
    <string name="rename_title">Choose a new name</string>
    <string name="rename_title_wordlinks">Type a back translation or spell the name.</string>
    <string name="recordings_title">Recordings</string>
    <string name="backTranslation_recordings_title">Back Translation Recordings </string>
    <string name="consultant_password_title">Consultant Password</string>
    <string name="consultant_password_message">Please enter the consultant password:</string>
    <string name="consultant_incorrect_password_message">Incorrect Password</string>
    <string name="affirm_accuracy_check_title">Affirm Accuracy Check</string>
    <string name="affirm_accuracy_check_message">If this is a Bible story, has this story been checked for accuracy by someone with Bible knowledge?</string>
    <string name="affirm_accuracy_check_NotaBibleStory">&#xA0;&#xA0;this is not a Bible story&#xA0;&#xA0;</string>
    <string name="request_accuracy_check_message">Please have someone with Bible knowledge check this story for accuracy.</string>
    <string name="stories_not_found_title"></string>
    <string name="stories_not_found_body">Now it\'s time to install some stories.&lt;br/>
        Tap the menu in the upper left, then...&lt;br/>&lt;br/>
        To install the demo story, choose:&lt;br/>
        &lt;b>&lt;font color="#ffffff">Add Demo to Story List&lt;/font>&lt;/b>&lt;br/>&lt;br/>
        If you are connected to the internet, you can get more stories by choosing one of the &lt;b>&lt;font color="#ffffff">\'Download ...\'&lt;/font>&lt;/b> options.
        
     </string>
    <string name="stories_not_found_in_progress">There are no stories in progress.</string>
    <string name="stories_not_found_completed">There are no completed stories.</string>
    <string name="welcome_screen_msg">
        On the next screen, &lt;b>create a folder&lt;/b> and name it &lt;font color=\"green\">SP Templates&lt;/font>.&lt;br/>
        Then tap &lt;b>SELECT&lt;/b> at the bottom of that screen.&lt;br/>&lt;br/>
        Here are  &lt;a href="https://docs.google.com/document/d/10mPxRtR_JsMFhboCauecOSe_ScY5_j59jJfMOF2AYko/edit">detailed instructions&lt;/a>.
    </string>
    <string name="select_workspace_help_msg">
        &lt;font color=\"gray\">The objective in what follows is to tell Story Producer where to find the story templates.&lt;/font>&lt;br/>&lt;br/>
        The next screen allows you to pick a folder.&lt;br/>
        In that screen you will need to Navigate to the &lt;font color=\"green\">SP Templates&lt;/font> folder.&lt;br/>
        Then tap &lt;b>SELECT&lt;/b> at the bottom of that screen.
    </string>
    <string name="welcome_screen_demo_error">Demo functionality coming soon!</string>
    <string-array name="orthography_list">
        <item>None</item>
        <item>Trial</item>
        <item>Stable</item>
    </string-array>
    <string-array name="communication_list">
        <item>Phone (SMS)</item>
        <item>E-mail</item>
        <item>WhatsApp (Text)</item>
        <item>Facebook</item>
        <item>Other</item>
    </string-array>
    <string-array name="location_type_list">
        <item>Local</item>
        
    </string-array>
    <string name="nav_open">Options</string>
    <string name="nav_close">Close</string>
    <string name="PhoneId">PhoneId</string>
    <string name="export_title_header">Text in Filename</string>
    <string name="Text_In_Filename_Placeholder">Type Your Local Short Story Title Here</string>
    <string name="export_options_header">Options</string>
    <string name="export_include_soundtrack">Include Background Music (Fx)</string>
    <string name="export_include_pictures">Include Pictures (Px)</string>
    <string name="export_include_text">Include Story Text (Tx)</string>
    <string name="export_include_song">Include Local Song (Sg)</string>
    <string name="export_include_KBFX">Enable Picture Movement (Mv)</string>
    <string name="export_dumbphone">(3gp) is for </string>
    <string name="export_smartphone">(mp4) is for </string>
    <string name="export_local_credits_unchanged">Edit Local Credits</string>
    <string name="local_credits_check_mark_description">check mark indicating if the local credits have been updated</string>
    <string name="export_start">Create Video</string>
    <string name="export_cancel">Cancel</string>
    <string name="export_cancel_comment">We are now creating your video. Do not leave this screen until the video is complete.</string>
    <string name="export_local_credits_header">Local Credits</string>
    <string name="no_videos">No Videos to Share</string>
    <string name="video_creation">Video Creation</string>
    <string name="bloom_import">Bloom Book Import</string>
    <string name="accuracy_check">Accuracy Check</string>
    <string name="video_wide_screen">Generate Widescreen Video</string>
    <string name="video_wide_screen_summary">Generate a 16:9 HD widescreen MP4 output video only.</string>
    <string name="bloom_import_alt_lwc">Alternate Language</string>
    <string name="bloom_import_alt_lwc_summary">Use this to specify which language code to use when importing a manually-installed story template / Bloom book (for example, on an SD card). Only this language code will be imported into SP and the book must have content in that language. Normally, leave this blank to import the book’s default language.</string>
    <string name="bloom_import_bgimage_color">Background Image Color #</string>
    <string name="bloom_import_bgimage_color_summary">Enter a background color to use for scaled images and videos here as a hex value or color name.</string>
    <string name="settings_experimental"><font color="#F6DDCC">These settings are experimental. Use with caution!</font></string>
    <string name="help_menu_detailed">Show detailed help for this page</string>
    <string name="help_menu_tutor_restart">Restart Tutorial Windows</string>
    <string name="help_menu_tutor_resume">Hide/Show Tutorial Windows</string>
</resources>