<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:key="settings_static_field_key"
        android:selectable="false"
        android:persistent="false"
        android:title="@string/dev_settings"
        android:summary="@string/settings_experimental" />

    <PreferenceCategory app:title="@string/video_creation">

        <SwitchPreferenceCompat
            app:key="video_wide"
            app:title="@string/video_wide_screen"
            app:summary="@string/video_wide_screen_summary"/>

        <EditTextPreference
            app:key="bloom_bgimage_color"
            app:title="@string/bloom_import_bgimage_color"
            app:summary="@string/bloom_import_bgimage_color_summary"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/bloom_import">

        <EditTextPreference
            app:key="bloom_alt_lwc"
            app:title="@string/bloom_import_alt_lwc"
            app:summary="@string/bloom_import_alt_lwc_summary"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/accuracy_check"
        app:isPreferenceVisible="false" >

        <SwitchPreferenceCompat
            app:key="accuracy_confirm_all"
            app:title="@string/accuracy_check_confirm_all" />

    </PreferenceCategory>

</PreferenceScreen>