<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_export"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.sil.storyproducer.controller.export.ShareActivity">

    <LinearLayout
        android:id="@+id/main_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dumbphone_3gp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:text="@string/export_dumbphone"
                android:drawableEnd="@drawable/ic_dumbphone"/>

            <TextView
                android:id="@+id/smartphone_mp4"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:text="@string/export_smartphone"
                android:drawableEnd="@drawable/ic_smartphone_white_24dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/share_section"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <ListView
                android:id="@+id/videos_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/no_videos_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/nav_drawer_margin"
                android:text="@string/no_videos"
                android:textSize="@dimen/large_text" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/lock_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_semi_transparent">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            app:srcCompat="@drawable/ic_lock_blue"
            android:contentDescription="@string/stage_locked" />
    </RelativeLayout>
</RelativeLayout>