<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_wholestorybacktranslation"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context="org.sil.storyproducer.controller.remote.WholeStoryBackTranslationActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/wholeStoryImageView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:contentDescription="@string/whole_story_title" />

        <ImageButton
            android:id="@+id/playButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:onClick="onClickPlayPauseButton"
            android:src="@drawable/ic_play_circle_outline_white_36dp"
            android:contentDescription="@string/play" />

        <SeekBar
            android:id="@+id/videoSeekBar"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:paddingBottom="@dimen/nav_drawer_margin"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="false"
            android:max="100" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingTop="70dp">

            <ImageView
                android:id="@+id/soundOff"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:visibility="gone"
                app:srcCompat="@drawable/ic_volume_off_white_36dp"
                android:contentDescription="@string/sound_off" />

            <Switch
                android:id="@+id/volumeSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/soundOn"
                android:layout_toStartOf="@+id/soundOff"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/soundOn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/volumeSwitch"
                android:visibility="gone"
                app:srcCompat="@drawable/ic_volume_off_white_36dp"
                android:contentDescription="@string/sound_on" />
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>
